hive-macro/tests/macro/hive_test/should_fail/function_argument_mutability.rs
#[hive_macro::hive_test]
fn test_function(test_channel: &String, handle: String, info: String) {}

fn main() {}
